# ppgdetector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Sliding_DFT.m
cmake/: FindLIBVLCQT.cmake
data/: data.mat  data_1031_0399_tRGB.csv  data_1109_0427_RGB_fixed.txt  data_1224_0005_IR_detect.csv  data_1224_0005_IR_fixed.csv  data_RGB_1031_0399.mat  saveCameraDataTest.csv  saveDataTest.csv
data/wave/: PIC_0399.detect.csv  PIC_0399_detect.csv  PIC_0400.detect.csv  PIC_0400_detect.csv  PIC_0401.detect.csv  PIC_0427.detect.csv  PIC_0427_detect.csv  PIC_0430.detect.csv  PIC_0430_detect.csv
dep/sigpack/base/: base.h
doc/: INSTALL_MacOS.md  INSTALL_MinGW.md  INSTALL_Ubuntu.md  测试文档.docx  用户手册.docx  设计文档.docx  需求文档.docx  需求设计文档.md
osx/: CMakeLists.txt
src/: Filter.h  VideoPPG.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  old.ui  ppgController.cpp  ppgController.h  ppgDetector.cpp  ppgDetector.h  ppgFilter.cpp  ppgFilter.h  ppgViewer.cpp  ppgViewer.h  ppgViewer.pro  ppgViewer.ui  signalTester.cpp  utils.h
src/basic/: color_space.py  heartrate.m  output_detect.txt  readme.md  readme_th.md  rgb_c.py  rgb_simple.py  rgb_v.py  usage.md  video_bg_sub.py  video_detect_smooth_dlib.py
src/fitPPG/: mu&sigma.txt  output_detect.txt  segmentation.py  standardSig.txt  utils.py  video_bg_sub.py
src/interface/: interface_v_1_2.pro  interface_v_1_2.pro.user.859f2dc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  videoplayerplugin.lib
src/test/: DetectorBlackBox.cpp  DetectorWhiteBoxTest.cpp  bandpassTest.cpp  findpeakTest.cpp
src/test/.ipynb_checkpoints/: lightTest-checkpoint.ipynb
windows/: CMakeLists.txt  Project.rc.in
